--- a/tutorials/d_basis_handling/index.html
+++ b/tutorials/d_basis_handling/index.html
@@ -137,7 +137,7 @@
 </span></code></pre></div>
 <div class="language-text highlight"><pre><span></span><code>True
 </code></pre></div>
-<p>This is useful when transforming arrays of density matrices, because appending _e only works on attributes of the orbital list. As density matrices are a simulation output and not an attribute of the orbital list, appending _e will not work and a separate method is needed.</p>
+<p>This is useful when transforming arrays of density matrices, because appending _e only works on attributes of the orbital list. Density matrices are a simulation output and as such not an attribute of the orbital list. Appending _e to the variable name will thus not work and a separate method is needed.</p>
 <p>Transition dipole moments can be displayed in energy basis</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-3-1"><a id="__codelineno-3-1" name="__codelineno-3-1" href="#__codelineno-3-1"></a><span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
 </span><span id="__span-3-2"><a id="__codelineno-3-2" name="__codelineno-3-2" href="#__codelineno-3-2"></a><span class="n">plt</span><span class="o">.</span><span class="n">matshow</span><span class="p">(</span><span class="n">flake</span><span class="o">.</span><span class="n">dipole_operator_e</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">real</span><span class="p">)</span>
